Design fixes + menu

--- a/android/app/src/main/res/values/branch.xml
+++ b/android/app/src/main/res/values/branch.xml
@@ -1,4 +1,4 @@
 <resources>
-  <string name="branch_key">key_live_xxxxxxxxx</string>
-  <string name="branch_key_test">key_test_xxxxxxxxx</string>
+  <string name="branch_key">key_live_fBxe5guebgnvs5SEaAlJWabpzFgSVJsk</string>
+  <string name="branch_key_test">key_live_fBxe5guebgnvs5SEaAlJWabpzFgSVJsk</string>
 </resources>
